<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="insert"
            type="com.example.uasariq.ui.insert.InsertFragment" />
    </data>

    <RelativeLayout
        android:id="@+id/rv_tambah"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgmerah">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/insert_barang"
                android:textColor="#000"
                android:textSize="24dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/nama_barang"
                android:textSize="14dp"

                />

            <EditText
                android:id="@+id/edt_namabarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kotakisi"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/harga_barang"
                android:textSize="14dp"

                />


            <EditText
                android:id="@+id/edt_hargabeli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kotakisi"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/jumlah_barang"
                android:textSize="14dp"

                />

            <EditText
                android:id="@+id/edt_jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kotakisi"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />


        </LinearLayout>


        <Button
            android:id="@+id/btn_insertitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/merah"
            android:text="@string/insert_barang"
            android:textColor="@color/white" />
    </RelativeLayout>
</layout>